// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render correctly 1`] = `
<DocumentFragment>
  <img
    alt="foo"
    class="c-img image"
    src="/public/img/test.png"
  />
</DocumentFragment>
`;

exports[`Image should render correctly with defaults 1`] = `
<DocumentFragment>
  <img
    alt=""
    class="c-img"
    src="/public/img/test.png"
  />
</DocumentFragment>
`;
